# github-telegram-bot

./: .envrc.example  .gitignore  Cargo.toml  Dockerfile  README.md  project.clj
.devcontainer/: dev.Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: workflow.yml
src/: api_types.rs  config.rs  main.rs
src/github/: format_push_event.rs  mod.rs  types.rs  verify_signature.rs
src/github_bot/: github_api.clj  handler.clj
src/routes/: github.rs  github_types.rs
src/telegram/: mod.rs  types.rs
test/github_bot/: core_test.clj
