[package]
name = "webbitiimibot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json", "macros", "tokio"] }
dotenvy = "0.15.7"
envconfig = "0.10.0"
hex-literal = "0.4.1"
hmac = "0.12.1"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-middleware = { version = "0.3.2", features = ["json"] }
reqwest-retry = "0.6.0"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
teloxide = { version = "0.12.2", features = ["webhooks", "webhooks-axum"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
